--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:title" content="Tuan-Dung Cao" />
         <meta property="og:locale" content="vi_VN" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="index.html" />
         <meta property="og:image" content="images/img.jpg" />
         <meta property="og:description" content="Tuan-Dung Cao Page" />
         <meta property="og:site_name" content="Tuan-Dung Cao" />
@@ -34,7 +34,7 @@
             <ul class="top-nav nav_list">
                 <li class="sub"><a href="#about" title="About" class="scroll">About me</a></li>
                 <li class="sub"><a href="#teaching" class="scroll">Teaching</a></li>
-                <li class="logo"><a title="Home" href="#home" class="scroll"><img src="http://soict.hust.edu.vn/~dungct/Images/anh3.gif" height="50px" alt="Home" class="responsive"/></a></li>
+                <li class="logo"><a title="Home" href="#home" class="scroll"><img src="images/anh3.gif" height="50px" alt="Home" class="responsive"/></a></li>
                 <li class="sub"><a href="publication.html" title="Publication">Publication</a></li>
                 <li class="sub"><a href="project.html" title="Project">Project</a></li>
             </ul>
@@ -49,10 +49,10 @@
                         <div class="col-sm-6 img">
                             <div class="slider center-block">
                                 <div id="owl-img" class="owl-carousel owl-theme">
-                                    <div class="item"><img src="http://soict.hust.edu.vn/~dungct/Images/anh3.gif"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
-                                    <div class="item" ><img src="http://soict.hust.edu.vn/~dungct/Images/anh1after.jpg"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
-                                    <div class="item"><img src="http://soict.hust.edu.vn/~dungct/Images/anh3.jpg"  class="responsive  img-circle center-block" alt="" height="220px" width="220px"></div>
-                                    <div class="item"><img src="http://soict.hust.edu.vn/~dungct/Images/anh4.jpg"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
+                                    <div class="item"><img src="images/anh3.gif"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
+                                    <div class="item" ><img src="images/anh1after.jpg"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
+                                    <div class="item"><img src="images/anh3.jpg"  class="responsive  img-circle center-block" alt="" height="220px" width="220px"></div>
+                                    <div class="item"><img src="images/anh4.jpg"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
                                 </div>
                             </div>
                             <h3 class="text-center name wow fadeInDown" data-wow-delay="0.25s">Tuan-Dung Cao</h3>
@@ -101,11 +101,11 @@
                             </ul>
                             <div class="slider center-block">
                                 <div id="owl-img2" class="owl-carousel owl-theme">
-                                    <div class="item"><img src="http://soict.hust.edu.vn/~dungct/Images/anh3.gif"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item"><img src="images/anh3.gif"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
                                     <div class="item"><img src="images/ab1.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
-                                    <div class="item" ><img src="http://soict.hust.edu.vn/~dungct/Images/anh1after.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
-                                    <div class="item"><img src="http://soict.hust.edu.vn/~dungct/Images/anh3.jpg"  class="responsive  img-circle center-block" alt="" height="200px" width="200px"></div>
-                                    <div class="item"><img src="http://soict.hust.edu.vn/~dungct/Images/anh4.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item" ><img src="images/anh1after.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item"><img src="images/anh3.jpg"  class="responsive  img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item"><img src="images/anh4.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
                                     <div class="item"><img src="images/ab2.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
                                 </div>
                             </div>
