--- a/publication.html
+++ b/publication.html
@@ -12,7 +12,7 @@
         <meta property="og:title" content="Tuan-Dung Cao" />
         <meta property="og:locale" content="vi_VN" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="publication.html" />
         <meta property="og:image" content="images/img.jpg" />
         <meta property="og:description" content="Tuan-Dung Cao Publications" />
         <meta property="og:site_name" content="Tuan-Dung Cao" />
@@ -56,7 +56,7 @@
             <ul class="top-nav nav_list">
                 <li class="sub"><a href="index.html#about" title="About">About me</a></li>
                 <li class="sub"><a href="index.html#teaching">Teaching</a></li>
-                <li class="logo"><a title="Home" href="index.html"><img src="http://soict.hust.edu.vn/~dungct/Images/anh3.gif" height="50px" alt="" class="responsive"/></a></li>
+                <li class="logo"><a title="Home" href="index.html"><img src="images/anh3.gif" height="50px" alt="" class="responsive"/></a></li>
                 <li class="sub"><a href="publication.html" title="Publication">Publication</a></li>
                 <li class="sub"><a href="project.html" title="Project">Project</a></li>
             </ul>
