--- a/publication.html
+++ b/publication.html
@@ -34,9 +34,6 @@
                 margin-top: 10px;
                 cursor: pointer;
             }
-            .publication li:hover{
-                color: #28ABE3;
-            }
             .publication h1{
                 transition: 0.5s;
                 -webkit-transition: 0.5s;
@@ -56,7 +53,7 @@
             <ul class="top-nav nav_list">
                 <li class="sub"><a href="index.html#about" title="About">About me</a></li>
                 <li class="sub"><a href="index.html#teaching">Teaching</a></li>
-                <li class="logo"><a title="Home" href="index.html"><img src="images/anh3.gif" height="50px" alt="" class="responsive"/></a></li>
+                <li class="logo"><a title="Home" href="index.html"><img src="images/home.png" height="50px" alt="" class="responsive"/></a></li>
                 <li class="sub"><a href="publication.html" title="Publication">Publication</a></li>
                 <li class="sub"><a href="project.html" title="Project">Project</a></li>
             </ul>
@@ -67,7 +64,7 @@
             <div class="bg-home">
                 <div class="container home">
                     <h1 class="text-center raleway upcase heading"><span>P</span>ublicatio<span>n</span></h1>
-                    <img src="images/publication.png" class="responsive center-block"  height="200px" alt="">
+                    <img src="images/publication.png" class="responsive center-block"  height="100px" alt="">
                     <div class="publication col-sm-10 col-sm-offset-1">
 
                     </div>
