--- a/index.html
+++ b/index.html
@@ -50,35 +50,38 @@
                         <div class="col-sm-6 img">
                             <div class="slider center-block">
                                 <div id="owl-img" class="owl-carousel owl-theme">
-                                    <div class="item"><img src="images/anh3.gif"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
-                                    <div class="item" ><img src="images/anh1after.jpg"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
-                                    <div class="item"><img src="images/anh3.jpg"  class="responsive  img-circle center-block" alt="" height="220px" width="220px"></div>
-                                    <div class="item"><img src="images/anh4.jpg"  class="responsive img-circle center-block" alt="" height="220px" width="220px"></div>
+                                    <div class="item"><img src="images/anh3.gif"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item" ><img src="images/anh1after.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item"><img src="images/anh3.jpg"  class="responsive  img-circle center-block" alt="" height="200px" width="200px"></div>
+                                    <div class="item"><img src="images/anh4.jpg"  class="responsive img-circle center-block" alt="" height="200px" width="200px"></div>
                                 </div>
                             </div>
                             <h3 class="text-center name" data-wow-delay="0.25s">Tuan-Dung Cao</h3>
+                            <h4 class="text-center wow fadeIn" data-wow-delay="0.25s">Researcher and Lecturer</h4>
                             <ul class="raleway link center-block">
-                                <li class="center-block"><a href="http://soict.hust.edu.vn/" title="Viện Công nghệ Thông tin và Truyền thông"><img src="images/soict.png" class="responsive center-block" alt=""></a></li>
                                 <li class="center-block"><a href="http://hust.edu.vn/" title=" Đại học Bách Khoa Hà Nội."><img src="images/hust.jpg" class="responsive center-block" alt=""></a></li>
+                                <li class="center-block"><a href="http://soict.hust.edu.vn/" title="Viện Công nghệ Thông tin và Truyền thông"><img src="images/soict.png" class="responsive center-block" alt=""></a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6 info">
                             <h3 class="raleway"><i class="fa fa-fw fa-dot-circle-o"></i> Information</h3>
                             <ul class="raleway">
+                                <li>Head of Department of Software Engineering.</li>
                                 <li>Hanoi University of Science Technology.</li>
                                 <li>School of Information & Communication Technology.</li>
                                 <!-- <li>Ph.D. in Informatics and Computer Science.</li> -->
-                                <li>Vice Deputy of Department of Software Engineering.</li>
                             </ul>
                             <h3 class="raleway"><i class="fa fa-fw fa-dot-circle-o"></i> Contact me</h3>
                             <ul class="raleway contact" data-wow-delay="0.45s">
-                                <li><i class="fa fa-fw fa-envelope"></i><a href="mailto:dungct@it-hut.edu.vn"> dungct@it-hut.edu.vn</a> | <a href="mailto:dungct-fit@mail.hut.edu.vn"> dungct-fit@mail.hut.edu.vn</a></li>
+                                <li><i class="fa fa-fw fa-envelope"></i><a href="mailto:dungct@soict.hust.edu.vn "> dungct@soict.hust.edu.vn </a> | <a href="mailto:dung.caotuan@hust.edu.vn"> dung.caotuan@hust.edu.vn</a></li>
                                 <li><i class="fa fa-fw fa-phone"></i> (84-4)3 8682 595</li>
                                 <li><i class="fa fa-fw fa-map-marker"></i> Room 601, B1, Hanoi Universtiy of Science and Technology, Ta Quang Buu, Hai Ba Trung,Ha Noi,Viet Nam</li>
                                 <li><i class="fa fa-fw fa-info"></i><a href="http://soict.hut.edu.vn/~dungct/">http://soict.hut.edu.vn/~dungct/</a></li>
                             </ul>
 
                             <div class="map" id="map"></div>
+                            <br>
+                            <br>
                             <div class="copyright">© Tuan-Dung Cao. Hanoi University of Science and Technology. <a href="#home"><i class="fa fa-fw fa-angle-double-up fa-3x"></i></a></div>
                         </div>
                     </div>
