update meta tag

--- a/data/index.html
+++ b/data/index.html
@@ -8,5 +8,7 @@
 <a href="https://en.wikipedia.org/wiki/Markdown#Example">Markdown Guide</a>
 <hr>
 <img src="../images/guide.png" alt="">
+<hr>
+Design by Le Vinh Thien - 2015 - HUST - Hedspi K58 levinhthien.bka@gmail.com
 </body>
 </html>
