--- a/publication.html
+++ b/publication.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<!-- Copyright @ 2015 Le Vinh Thien - HUST - Hedspi K58 levinhthien.bka@gmail.com -->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Tuan-Dung Cao - Publications">
-        <META NAME="keywords" CONTENT="Tuan-Dung Cao, Publications">
+        <meta name="description" content="Tuan-Dung Cao - Publications - Công bố">
+        <META NAME="keywords" CONTENT="Tuan-Dung Cao, Publications, dungct">
         <meta name="copyright" content="Copyright 2015 by Tuan-Dung Cao">
         <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-        <meta property="og:title" content="Tuan-Dung Cao" />
+        <meta property="og:title" content="Tuan-Dung Cao - Publication - Công bố" />
         <meta property="og:locale" content="vi_VN" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="publication.html" />
         <meta property="og:image" content="images/img.jpg" />
         <meta property="og:description" content="Tuan-Dung Cao Publications" />
-        <meta property="og:site_name" content="Tuan-Dung Cao" />
+        <meta property="og:site_name" content="Tuan-Dung Cao - Publication - Công bố" />
         <meta property="fb:admins" content="" />
+        <link rel="canonical" href="publication.html"/>
+        <link rel="next" href="index.html"/>
+        <link rel="prev" href="project.html" />
         <title>Tuan-Dung Cao - Publications</title>
         <link rel="stylesheet" type="text/css" href="css/reset.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -109,3 +111,4 @@
 
     </body>
 </html>
+<!-- Design by Le Vinh Thien - 2015 - HUST - Hedspi K58 levinhthien.bka@gmail.com -->
