--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<!-- Copyright @ 2015 Le Vinh Thien - HUST - Hedspi K58 levinhthien.bka@gmail.com -->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Tuan-Dung Cao">
-        <META NAME="keywords" CONTENT="Tuan-Dung Cao">
+        <meta name="description" content="Tuan-Dung Cao - Welcome to my website - Chào mừng đến với website của tôi">
+        <META NAME="keywords" CONTENT="Tuan-Dung Cao, dungct, web, google, hust, soict">
         <meta name="copyright" content="Copyright 2015 by Tuan-Dung Cao">
         <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-        <meta property="og:title" content="Tuan-Dung Cao" />
+        <meta property="og:title" content="Tuan-Dung Cao - Homepage - Cao Tuấn Dũng" />
         <meta property="og:locale" content="vi_VN" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="index.html" />
         <meta property="og:image" content="images/img.jpg" />
-        <meta property="og:description" content="Tuan-Dung Cao Page" />
-        <meta property="og:site_name" content="Tuan-Dung Cao" />
+        <meta property="og:description" content="Tuan-Dung Cao - Welcome to my website - Chào mừng đến với website của tôi" />
+        <meta property="og:site_name" content="Tuan-Dung Cao - Homepage - Cao Tuấn Dũng" />
         <meta property="fb:admins" content="" />
+        <link rel="canonical" href="index.html"/>
+        <link rel="next" href="publication.html"/>
+        <link rel="prev" href="project.html" />
         <title>Tuan-Dung Cao - Homepage</title>
         <link rel="stylesheet" type="text/css" href="css/reset.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -82,7 +84,7 @@
                             <div class="map" id="map"></div>
                             <br>
                             <br>
-                            <div class="copyright">© Tuan-Dung Cao. Hanoi University of Science and Technology. <a href="#home"><i class="fa fa-fw fa-angle-double-up fa-3x"></i></a></div>
+                            <div class="copyright">&copy Tuan-Dung Cao. Hanoi University of Science and Technology. <a href="#home"><i class="fa fa-fw fa-angle-double-up fa-3x"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -328,3 +330,4 @@
 
     </body>
 </html>
+<!-- Design by Le Vinh Thien - 2015 - HUST - Hedspi K58 levinhthien.bka@gmail.com -->
